--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <!-- <header>
         <div class="container">
             <div class="header-top"></div>
@@ -28,24 +28,52 @@
         </div>
     </header> -->
     <div class="banner">
-        <div class="container">
-            <div class="banner-content row">
-                <div class="banner-content-left col-6">
-                    <span>I'm</span>
-                    <h1>Kieu Thi Bang Bang</h1>
-                    <div class="text-custom">
-                        Development
-                    </div>
-                    <div class="btn">
-                        Hire me
-                    </div>
-                </div>
-                <div class="banner-content-right col-6">
-                    <img src="./images/avt-demo.png" alt="">
-                </div>
-            </div>
+      <div class="container">
+        <div class="banner-content row">
+          <div class="banner-content-left col-6">
+            <span>I'm</span>
+            <h1>Kieu Thi Bang Bang</h1>
+            <div class="text-custom">Development</div>
+            <div class="btn">Hire me</div>
+          </div>
+          <div class="banner-content-right col-6">
+            <img src="./images/avt-demo.png" alt="" />
+          </div>
         </div>
+      </div>
     </div>
-    <div class="main"></div>
-</body>
+    <div class="main">
+      <section class="about">
+        <div class="container">
+          <div class="row about-content">
+            <div class="col-6"></div>
+            <div class="col-6 p3">
+              <h3>About me</h3>
+              <div class="description">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Tempora quis officia iste cupiditate asperiores molestias
+                  tempore. Corporis recusandae laudantium sint repellendus.
+                  Earum, reiciendis numquam tenetur maiores veniam vero
+                  suscipit! At.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="services">
+        <div class="container">
+          <div class="row services-top">
+            <div class="title">
+              <h3>My Services</h3>
+            </div>
+            <div class="btn">Hire me</div>
+          </div>
+          <div class="row services-box"></div>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
