--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <!-- <header>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
+  <!-- <header>
         <div class="container">
             <div class="header-top"></div>
             <div class="header-middle">
@@ -27,53 +32,233 @@
             </div>
         </div>
     </header> -->
-    <div class="banner">
-      <div class="container">
-        <div class="banner-content row">
-          <div class="banner-content-left col-6">
-            <span>I'm</span>
-            <h1>Kieu Thi Bang Bang</h1>
-            <div class="text-custom">Development</div>
-            <div class="btn">Hire me</div>
-          </div>
-          <div class="banner-content-right col-6">
-            <img src="./images/avt-demo.png" alt="" />
-          </div>
+  <div class="banner">
+    <div class="container">
+      <div class="banner-content row">
+        <div class="banner-content-left col-6">
+          <span>I'm</span>
+          <h1>Kieu Thi Bang Bang</h1>
+          <div class="text-custom">Development</div>
+          <div class="btn">Hire me</div>
+        </div>
+        <div class="banner-content-right col-6">
+          <img src="./images/avt-demo.png" alt="" />
         </div>
       </div>
     </div>
-    <div class="main">
-      <section class="about">
-        <div class="container">
-          <div class="row about-content">
-            <div class="col-6"></div>
-            <div class="col-6 p3">
-              <h3>About me</h3>
-              <div class="description">
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Tempora quis officia iste cupiditate asperiores molestias
-                  tempore. Corporis recusandae laudantium sint repellendus.
-                  Earum, reiciendis numquam tenetur maiores veniam vero
-                  suscipit! At.
-                </p>
+  </div>
+  <div class="main">
+    <section class="about">
+      <div class="container">
+        <h3>About Me</h3>
+        <div class="row about-content">
+          <div class="col-6"></div>
+          <div class="col-6 p3">
+
+            <div class="description">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Tempora quis officia iste cupiditate asperiores molestias
+                tempore. Corporis recusandae laudantium sint repellendus.
+                Earum, reiciendis numquam tenetur maiores veniam vero
+                suscipit! At.
+              </p>
+            </div>
+
+            <div class="btn">Read more</div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="container">
+        <h3>My Services</h3>
+
+        <div class="row services-box">
+          <div class="col-6 p1">
+            <div class="row services-item">
+              <div class="col-3 services-item-img">
+                <i class="fa-solid fa-code"></i>
+              </div>
+              <div class="col-9 services-item-content">
+                <h4>Front-end</h4>
+                <span>Start from
+                  <strong class="text-secondary">$199.0</strong>
+                </span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quo deleniti rem natus vero cum error
+                  .</p>
               </div>
             </div>
           </div>
-        </div>
-      </section>
 
-      <section class="services">
-        <div class="container">
-          <div class="row services-top">
-            <div class="title">
-              <h3>My Services</h3>
+          <div class="col-6 p1">
+            <div class="row services-item">
+              <div class="col-3 services-item-img">
+                <i class="fa-solid fa-code"></i>
+              </div>
+              <div class="col-9 services-item-content">
+                <h4>Front-end</h4>
+                <span>Start from
+                  <strong class="text-secondary">$199.0</strong>
+                </span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quo deleniti rem natus vero cum error
+                  .</p>
+              </div>
             </div>
-            <div class="btn">Hire me</div>
           </div>
-          <div class="row services-box"></div>
+
+
+          <div class="col-6 p1">
+            <div class="row services-item">
+              <div class="col-3 services-item-img">
+                <i class="fa-solid fa-code"></i>
+              </div>
+              <div class="col-9 services-item-content">
+                <h4>Front-end</h4>
+                <span>Start from
+                  <strong class="text-secondary">$199.0</strong>
+                </span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quo deleniti rem natus vero cum error
+                  .</p>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-6 p1">
+            <div class="row services-item">
+              <div class="col-3 services-item-img">
+                <i class="fa-solid fa-code"></i>
+              </div>
+              <div class="col-9 services-item-content">
+                <h4>Front-end</h4>
+                <span>Start from
+                  <strong class="text-secondary">$199.0</strong>
+                </span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, quo deleniti rem natus vero cum error
+                  .</p>
+              </div>
+            </div>
+          </div>
+
+
         </div>
-      </section>
-    </div>
-  </body>
+      </div>
+    </section>
+
+
+
+    <section class="portfolio projects">
+
+      <h3>My Projects</h3>
+      <main class="mainContainer">
+
+        <!--  *****  Buttons Section Starts  *****  -->
+        <div class="button-group">
+          <button class="button active" data-filter="*">All</button>
+          <button class="button" data-filter=".design">Design</button>
+          <button class="button" data-filter=".development">Development</button>
+          <button class="button" data-filter=".logo">Logo</button>
+        </div>
+        <!--  *****  Buttons Section Ends  *****  -->
+
+        <!--  *****  Gallery Section Starts  *****  -->
+        <div class="gallery">
+
+          <!--  *****  Card 1 Starts  *****  -->
+          <div class="item design">
+            <img src="./images/design1.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 1 Ends  *****  -->
+
+          <!--  *****  Card 2 Starts  *****  -->
+          <div class="item design">
+            <img src="./images/design2.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 2 Ends  *****  -->
+
+          <!--  *****  Card 3 Starts  *****  -->
+          <div class="item development">
+            <img src="./images/website1.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 3 Ends  *****  -->
+
+          <!--  *****  Card 4 Starts  *****  -->
+          <div class="item development">
+            <img src="./images/website2.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 4 Ends  *****  -->
+
+          <!--  *****  Card 5 Starts  *****  -->
+          <div class="item development">
+            <img src="./images/website3.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 5 Ends  *****  -->
+
+          <!--  *****  Card 6 Starts  *****  -->
+          <div class="item logo">
+            <img src="./images/logo1.jpg">
+            <div class="overlay">
+              <a href="#">VIEW MORE</a>
+            </div>
+          </div>
+          <!--  *****  Card 6 Ends  *****  -->
+
+        </div>
+        <!--  *****  Gallery Section Ends  *****  -->
+
+      </main>
+
+    </section>
+
+
+
+
+
+
+
+  </div>
+
+
+  <!--   *****   JQuery Link   *****   -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+
+  <!--   *****   Isotope Filter Link   *****  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
+
+  <script type="text/javascript">
+    var $galleryContainer = $('.gallery').isotope({
+      itemSelector: '.item',
+      layoutMode: 'fitRows'
+    })
+
+    $('.button-group .button').on('click', function () {
+      $('.button-group .button').removeClass('active');
+      $(this).addClass('active');
+
+      var value = $(this).attr('data-filter');
+      $galleryContainer.isotope({
+        filter: value
+      })
+    })
+  </script>
+</body>
+
 </html>
