--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <div class="logo">
 
                 </div>
-                <div class="menu">
+                <nav class="navbar">
                     <ul>
                         <li>
                             <a href="./index.html">Home page</a>
@@ -42,7 +42,7 @@
                             <a  href="./index.html">Contact</a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
         </div>
     </header>
