--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -16,10 +18,13 @@
         <div class="container">
             <div class="header-top"></div>
             <div class="header-middle">
-                <div class="logo">
+                <div class="logo"></div>
+                <div class="menu-icon">
+                    <i class="fas fa-bars" onclick="toggleMenu()"></i>
 
                 </div>
-                <div class="menu">
+
+                <nav class="navbar">
                     <ul>
                         <li>
                             <a id="btn-scroll-top-home">Home page</a>
@@ -40,11 +45,11 @@
                             <a id="btn-contact" href="#contact">Contact</a>
                         </li>
                     </ul>
-                    
-                </div>
+                </nav>
             </div>
         </div>
     </header>
+
     <div class="banner">
         <div class="effect-banner-top-left">
             <img src="./images/effect1.png" alt="">
@@ -216,7 +221,7 @@
                 <div class="item design">
                     <img src="./images/project2.png">
                     <div class="overlay">
-                        <a href="./project/bai1.html"  target="_blank">VIEW MORE</a>
+                        <a href="./project/bai1.html" target="_blank">VIEW MORE</a>
                     </div>
                 </div>
 
@@ -237,7 +242,7 @@
                 <div class="item design">
                     <img src="./images/project5.png">
                     <div class="overlay">
-                        <a href="./project/b1.html"  target="_blank">VIEW MORE</a>
+                        <a href="./project/b1.html" target="_blank">VIEW MORE</a>
                     </div>
                 </div>
 
@@ -482,6 +487,12 @@
 
             // Mở ứng dụng email
             window.location.href = mailtoLink;
+        }
+
+
+        function toggleMenu() {
+            const nav = document.querySelector('nav');
+            nav.classList.toggle('active');
         }
     </script>
 </body>
