--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <h3>Designer & Development.</h3>
                     </div>
                     <!-- <div class="text-custom">Development</div> -->
-                    <a class="btn" href="./DoKhanhSon_FE.pdf" target="_blank">Hire me</a>
+                    <a class="btn" href="./mycv.pdf" target="_blank">View my CV</a>
                 </div>
                 <div class="banner-content-right col-6">
                     <img src="./images/avt2.png" alt="" />
@@ -100,7 +100,7 @@
                             endless possibilities of web design together.</p> -->
                     </div>
 
-                    <a class="btn" href="./about.html" target="_blank">Read more</a>
+                    <a class="btn" href="./about.html">Read more</a>
 
                 </div>
             </div>
@@ -207,6 +207,11 @@
                 <button class="button" data-filter=".design">Design</button>
                 <button class="button" data-filter=".javascript">JavaScript</button>
                 <button class="button" data-filter=".full-stack">Full-stack</button>
+                <button class="button" >
+                    <a href="./projects.html">
+                        My practical exercise
+                    </a>
+                </button>
             </div>
 
             <div class="gallery">
