--- a/projects.html
+++ b/projects.html
@@ -54,22 +54,24 @@
     <section class="my-projects projects" id="">
         <div class="container ">
             <div class="back-btn"><i class="fa-solid fa-chevron-left"></i>
-            <a href="./index.html">Back to home</a></div>
+            <a href="./index.html#projects">Back to home</a></div>
             <h3 class="mt-2">My projects</h3>
 
             <div class="my-project-items mt-3">
                 <div class="my-project-item">
-                    <a href="https://github.com/bbicee/btap-tke-web/tree/main/Bai%2030%25" target="_blank">
-                        <div class="row">
-                            <div class="image">
-                                <img src="./images//project30.png" alt="">
-                            </div>
-                            <div class="content">
-                                <span>The mid-term test (30%)</span>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
-                            </div>
+                    <div class="row">
+                        <div class="image">
+                            <img src="./images//project30.png" alt="">
                         </div>
-                    </a>
+                        <div class="content">
+                            <span>The mid-term test (30%)</span>
+                            <p>Designed according to the culinary landing page template.</p>
+                        </div>
+                    </div>
+                    <div class="btn-group">
+                        <a class="preview-btn">Preview</a>
+                        <a href="" class="view-source-btn">View source</a>
+                    </div>
                 </div>
 
 
