--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <section class="about" id="about-page">
         <div class="container ">
             <div class="back-btn"><i class="fa-solid fa-chevron-left"></i>
-                <a href="./index.html#projects">Back to home</a></div>
+                <a href="./index.html">Back to home</a></div>
             <h3 class="mt-2">About Me</h3>
             <div class="row about-content">
                 <div class="col-6 about-content-img">
