--- a/projects.html
+++ b/projects.html
@@ -69,8 +69,8 @@
                         </div>
                     </div>
                     <div class="btn-group">
-                        <a class="preview-btn">Preview</a>
-                        <a href="" class="view-source-btn">View source</a>
+                        <a class="btn preview-btn" href="./project/test30/30%.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/Bai%2030%25" class="btn view-source-btn">View source</a>
                     </div>
                 </div>
 
@@ -82,10 +82,17 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 1</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Concepts and HTML language. </p>
                         </div>
                     </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/lab1/bai1.html" target="_blank">Preview</a>
+                        <a href="" class="btn view-source-btn">View source</a>
+                    </div>
                 </div>
+
+
+
                 <div class="my-project-item">
                     <div class="row">
                         <div class="image">
@@ -93,10 +100,16 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 2</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Knowledge of CSS. </p>
                         </div>
                     </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/lab2/bai2.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB2" class="btn view-source-btn">View source</a>
+                    </div>
                 </div>
+
+
                 <div class="my-project-item">
                     <div class="row">
                         <div class="image">
@@ -104,10 +117,17 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 3</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>website layout. </p>
                         </div>
                     </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/bai1.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB3" class="btn view-source-btn">View source</a>
+                    </div>
                 </div>
+
+
+
                 <div class="my-project-item">
                     <div class="row">
                         <div class="image">
@@ -115,10 +135,16 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 4</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p> Navigation bar - layer.</p>
                         </div>
                     </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/b1.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB4" class="btn view-source-btn">View source</a>
+                    </div>
                 </div>
+
+
                 <div class="my-project-item">
                     <div class="row">
                         <div class="image">
@@ -126,8 +152,12 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 5</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Javascript: Overview, Check number, random number. </p>
                         </div>
+                    </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/lab5/bai5.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB5" class="btn view-source-btn">View source</a>
                     </div>
                 </div>
                 <div class="my-project-item">
@@ -137,10 +167,16 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 6</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Validate form, Slide show, change style by javascript. </p>
                         </div>
                     </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/b6b4.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB6" class="btn view-source-btn">View source</a>
+                    </div>
                 </div>
+
+
                 <div class="my-project-item">
                     <div class="row">
                         <div class="image">
@@ -148,8 +184,12 @@
                         </div>
                         <div class="content">
                             <span>Practice exercise number 7</span>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                            <p>Dropdown menu </p>
                         </div>
+                    </div>
+                    <div class="btn-group">
+                        <a class="btn preview-btn" href="./project/lab7/index.html" target="_blank">Preview</a>
+                        <a href="https://github.com/bbicee/btap-tke-web/tree/main/TKWB7" class="btn view-source-btn">View source</a>
                     </div>
                 </div>
 
