--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="description">
                         <p>
                             I'm Bang Bang, a passionate and innovative Website Design enthusiast. Currently enrolled as
-                            a final-year IT student, I thrive on bringing creative visions to life through thoughtful
+                            a 2nd year IT student, I thrive on bringing creative visions to life through thoughtful
                             and user-centric designs. Proficient in HTML, CSS, and JavaScript, I enjoy crafting visually
                             appealing and seamlessly functional websites.
                         </p>
