--- a/projects.html
+++ b/projects.html
@@ -72,8 +72,8 @@
                                 </div>
                             </div>
                             <div class="btn-group">
-                                <a class="btn preview-btn" href="./project/test30/30%.html" target="_blank">Preview</a>
-                                <a href="https://github.com/bbicee/btap-tke-web/tree/main/Bai%2030%25"
+                                <a class="btn preview-btn" href="./project/quizz/index.html" target="_blank">Preview</a>
+                                <a href="https://github.com/bbicee/btap-tke-web/tree/main/quizz/index.html"
                                     class="btn view-source-btn">View source</a>
                             </div>
                         </div>
